Switch to java 11 build